[gd_scene load_steps=11 format=2]

[ext_resource path="res://goat/helper_scenes/InventoryItems.gd" type="Script" id=1]
[ext_resource path="res://goat/styles/inventory_slot_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://goat/styles/inventory_slot_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://goat/styles/inventory_slot_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://goat/styles/inventory_slot_disabled.tres" type="StyleBox" id=5]
[ext_resource path="res://goat/fonts/interface_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://goat/images/cancel_icon.png" type="Texture" id=7]
[ext_resource path="res://goat/images/item_interaction_icon.png" type="Texture" id=8]
[ext_resource path="res://goat/images/reset_rotation_icon.png" type="Texture" id=9]

[sub_resource type="ButtonGroup" id=1]
resource_name = "InventoryButtons"

[node name="InventoryItems" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptyInventoryText" type="Label" parent="CenterContainer"]
margin_left = 354.0
margin_top = 289.0
margin_right = 650.0
margin_bottom = 310.0
custom_fonts/font = ExtResource( 6 )
text = "There are no items in the inventory"

[node name="ItemButtons" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 68.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="Button" parent="ItemButtons"]
margin_top = 14.0
margin_right = 68.0
margin_bottom = 82.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button1" type="Button" parent="ItemButtons"]
margin_top = 86.0
margin_right = 68.0
margin_bottom = 154.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button2" type="Button" parent="ItemButtons"]
margin_top = 158.0
margin_right = 68.0
margin_bottom = 226.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button3" type="Button" parent="ItemButtons"]
margin_top = 230.0
margin_right = 68.0
margin_bottom = 298.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button4" type="Button" parent="ItemButtons"]
margin_top = 302.0
margin_right = 68.0
margin_bottom = 370.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button5" type="Button" parent="ItemButtons"]
margin_top = 374.0
margin_right = 68.0
margin_bottom = 442.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button6" type="Button" parent="ItemButtons"]
margin_top = 446.0
margin_right = 68.0
margin_bottom = 514.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button7" type="Button" parent="ItemButtons"]
margin_top = 518.0
margin_right = 68.0
margin_bottom = 586.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Buttons"]
margin_top = 194.0
margin_right = 68.0
margin_bottom = 262.0
rect_min_size = Vector2( 68, 68 )
hint_tooltip = "Cancel"
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
clip_text = true

[node name="UseButton" type="Button" parent="Buttons"]
margin_top = 266.0
margin_right = 68.0
margin_bottom = 334.0
rect_min_size = Vector2( 68, 68 )
hint_tooltip = "Use"
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
disabled = true
enabled_focus_mode = 0
icon = ExtResource( 8 )
clip_text = true
expand_icon = true

[node name="ResetRotationButton" type="Button" parent="Buttons"]
margin_top = 338.0
margin_right = 68.0
margin_bottom = 406.0
rect_min_size = Vector2( 68, 68 )
hint_tooltip = "Reset rotation"
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
disabled = true
enabled_focus_mode = 0
icon = ExtResource( 9 )
clip_text = true
expand_icon = true

[node name="HelpText" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -209.0
margin_top = 20.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 6 )
text = "Press RMB to rotate. Drag and drop other items to use them on this one."
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Buttons/UseButton" to="." method="_on_UseButton_pressed"]
[connection signal="pressed" from="Buttons/ResetRotationButton" to="." method="_on_ResetRotationButton_pressed"]
